[tool.poetry]
name = "reconenhance"
version = "1.0.0"
description = "A multi-threaded network reconnaissance tool which performs semi-automated enumeration of services."
authors = ["AD3M"]
license = "GNU GPL v3"
exclude = ["reconenhance.py"]
packages = [
	{ include = "reconenhance" },
]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.4"
colorama = "^0.4.4"
toml = "^0.10.2"
Unidecode = "^1.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
reconenhance = "reconenhance.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
